--- a/back/pom.xml
+++ b/back/pom.xml
@@ -69,6 +69,12 @@
 			<version>${dep.mapstruct.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
